--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,15 +39,15 @@ jpackage {
     }
 
     windows {
-        icon = "$buildDir/resources/main/icon.ico"
+        icon = new File(buildDir, "resources/main/icon.ico")
     }
 
     dependsOn shadowJar
     type = 'app-image'
     appName = 'ccq'
     appVersion = '1.0.0'
-    input = "$buildDir/libs"
+    input = new File(buildDir, "libs")
     mainJar = 'ccq.jar'
     mainClass = 'io.github.MainKt'
-    destination = "$buildDir/dist"
+    destination = new File(buildDir, "dist")
 }
